#
# Copyright (C) 2012, Northwestern University and Argonne National Laboratory
# See COPYRIGHT notice in top-level directory.
#
# $Id: Makefile.am -1   $
#
# @configure_input@

SUBDIRS = pnetcdf-api

EXTRA_DIST = README.CRAY \
             README.Fujitsu \
             README.INTEL \
             README.IBM \
             README.K-Computer \
             README.LINUX \
             README.SGI \
             README.SX \
             README.consistency \
             README.large_files \
             pbs.script \
             cobalt.script

dist-hook:
	-rm -rf `find $(distdir) -name .svn`


