#
# Copyright (C) 2012, Northwestern University and Argonne National Laboratory
# See COPYRIGHT notice in top-level directory.
#
# $Id$
#
# @configure_input@

srcdir  = @srcdir@
VPATH   = @srcdir@

include ../macros.make

GARBAGE      =

PACKING_LIST = config.guess \
               config.sub \
               install-sh \
               Makefile.in \
               foreach.m4 \
               utils.m4

all:

include $(srcdir)/../rules.make

